arrumando a paginação