@@ -1,6 +1,7 @@
 package br.unitins.topicos1.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import br.unitins.topicos1.dto.requisito.RequisitoDTO;
 import br.unitins.topicos1.dto.requisito.RequisitoResponseDTO;
@@ -20,7 +21,6 @@ public class RequisitoServiceImpl implements RequisitoService {
 
     @Inject
     RequisitoRepository repository;
-
 
     @Override
     @Transactional
@@ -54,7 +54,7 @@ public class RequisitoServiceImpl implements RequisitoService {
             Desempenho desempenho = Desempenho.ValueOf(dto.desempenho());
 
             requisito.setDesempenho(desempenho);
-            
+
         } else {
             throw new NotFoundException();
         }
@@ -81,9 +81,16 @@ public class RequisitoServiceImpl implements RequisitoService {
     }
 
     @Override
-    public List<RequisitoResponseDTO> findByAll() {
-        return repository.listAll().stream()
-                .map(e -> RequisitoResponseDTO.valueOf(e)).toList();
+    public List<RequisitoResponseDTO> findByAll(int page, int pageSize) {
+        List<Requisito> requisitos = repository.findAll().page(page, pageSize).list();
+
+        return requisitos.stream()
+                .map(e -> RequisitoResponseDTO.valueOf(e)).collect(Collectors.toList());
+    }
+
+    @Override
+    public long count() {
+        return repository.count();
     }
 
 }
